@@ -1,3 +1,4 @@
+# Allowed time intervals for logrotate
 type Logrotate::Periods = Enum[
   'hourly',
   'daily',
